@@ -11,4 +11,4 @@ MOD_STATUS_LOG_OUT=Log out
 MOD_STATUS_MESSAGES=Messages
 MOD_STATUS_CACHE_LABEL=Caching
 MOD_STATUS_CACHE_DESC=Select whether to cache the content of this module
-MOD_STATUS_VIEW_SITE=Preview
+MOD_STATUS_VIEW_SITE=View Site
